# ocamlformat-auto

./: README.md  dune-project  main.ml  ocamlformat-auto.opam  ocamlformat-manager.opam
